[project]
name = "LLaMa-Efficient-Tuning"
version = "0.1.0"

dependencies = [
    "torch>=1.13.1",
    "transformers>=4.29.1",
    "datasets>=2.12.0",
    "accelerate>=0.21.0",
    "peft>=0.4.0",
    "trl>=0.5.0",
    "scipy>=1.11.2",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.4.0",
    "jieba>=0.42.1",
    "rouge-chinese>=1.0.3",
    "nltk>=3.8.1",
    "gradio>=3.36.0",
    "uvicorn>=0.23.2",
    "sse-starlette>=1.6.5",
    "matplotlib>=3.7.2",
    "pydantic==1.10.11",
    "fastapi==0.95.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.rye.sources]]
name = "default"
url = "https://mirrors.aliyun.com/pypi/simple/"